Fix alignment of rating stars

--- a/src/amo/components/AddonReviewManagerRating/styles.scss
+++ b/src/amo/components/AddonReviewManagerRating/styles.scss
@@ -2,6 +2,7 @@
 @import '~amo/components/Rating/styles';
 
 .AddonReviewManagerRating {
+  align-items: center;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
